2006-01-18		Florian Boor <florian.boor@kernelconcepts.de>

	* Release Version 0.7
	* Makefile: Remove obsolete file.
	* main.c: Fix icon update, use tray message again.
	* pixmaps/*48.png: Replace misleading icons by new ones - one original 
	from Tango project (License: Creative Commons Attribution Share-Alike license) 
	and one derived from the Tango icon. Many thanks to the Tango project
	for providing such a great set of icons!
	

2006-01-15		Florian Boor <florian.boor@kernelconcepts.de>

	* Release Version 0.6
	* configure.ac, *.am, po/POTFILES.in: Autotools support.
	* gpe-mininet.desktop.in renamed to gpe-mininet.desktop.in.in
	* main.c: Major cleanup and port to use GPE plug instead of libmb.
	          Make use of glib capabilities.
			  Use infoprints instead of tray message.
	* main.c, pixmaps/*48.png: Add additional icons for bigger panels.
	* main.c (clicked): Use gpe function to set menu position.
	
2006-01-13		Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Fix status icon.

2005-08-29		Florian Boor <florian.boor@kernelconcepts.de>

	* Makefile: Fix stupid Makefile issues.

2005-02-12		Florian Boor <florian.boor@kernelconcepts.de>

	* Released Version 0.5

2005-02-08		Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Add icon resize capabilities.
	          Removed some old cruft and fixed warnings.
	* Makefile: Some install fixes. 

2004-08-01		Florian Boor <florian.boor@kernelconcepts.de>
	* main.c: Removed obsolete firewall stuff.
	* Makefile: New Version: 0.5

2004-07-09		Florian Boor <florian.boor@kernelconcepts.de>
	* netlink.c: Removed include causing compile to fail in some
                     environments.

2004-06-09		Florian Boor <florian.boor@kernelconcepts.de>
	* Released V 0.4
	* Makefile: new version, removed old cruft, made oe compatible
	* TODO: New file collecting good and less good ideas.
	* main.c: Added activation of firewall rules configured by gpe-shield.
	