@@ -4,5 +4,5 @@ _Name=Network Applet
 _Comment=Network connection checking panel applet.
 Exec=gpe-mininet
 Type=PanelApp
-Icon=/usr/share/gpe/pixmaps/default/gpe-mininet.png
+Icon=@prefix@/share/gpe/pixmaps/default/gpe-mininet.png
 Categories=Panel;Utility;GPE;Network;
